# Avorion-PioneerStarterPack

./: .gitignore  .pre-commit-config.yaml  README.md  modinfo.lua  pyproject.toml
.selid-hooks/: check-identity
data/localization/: deutsch.po  en.po  fr.po  jp.po  pt-br.po  ru.po  template.pot  zh.po
data/scripts/commands/: checkpay.lua  debug.lua
data/scripts/galaxy/: init.lua  old.lua  pic.lua
data/scripts/lib/: pioneerstarterpack.lua
data/scripts/player/: init.lua  onlinepay.lua
devtools/: build.py  scan.py  translate.py  unfuck.py
