[project]
name = "pioneerstarterpack"
version = "0.1.0"
description = ""
authors = [
    {name = "Rob Nelson",email = "nexisentertainment@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polib (>=1.2.0,<2.0.0)",
    "translate-po (>=1.0.13,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "luaparser (>=3.3.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = {extras = ["d"], version = "^1.17.1"}
black = {extras = ["d"], version = "^25.1.0"}
isort = "^6.0.1"

[tool.poetry]
package-mode=false